--- a/liquid-prep-app/src/app/components/dashboard/fields/fields.component.scss
+++ b/liquid-prep-app/src/app/components/dashboard/fields/fields.component.scss
@@ -1,22 +1,20 @@
 .full-div {
-  width: 100%
+  width: 100%;
 }
 
 .grid-list {
-  // justify-content: flex-start !important ;
-  // align-items: flex-start !important;
-
-  .header-div{
+  .header-div {
     display: flex;
-    background-color: #EDF5FF;
+    background-color: #edf5ff;
+    justify-content: space-between;
     width: 100%;
-  
-    .widget-column{
-      margin-left: 40px;
-      border-radius: 25px;
+
+    .widget-column {
+      margin-right: 40px;
+      border-radius: 20px;
       background-color: white;
       height: 70px;
-      width: 140px;
+      width: 160px;
 
       img {
         width: 60px;
@@ -26,20 +24,24 @@
     }
 
     .header-column {
-      margin-left: 30px;
-
+      margin-left: 40px;
     }
   }
 }
 
-.fields-header-div {
-  display: flex;
+.mat-tab-label-header {
   width: 100%;
+}
+
+.empty-container {
+  display: flex;
   justify-content: center;
+  align-items: center;
+  margin-top: 50px;
 }
 
 .card-container {
-  height: 500px
+  height: 500px;
 }
 
 .fields-container {
@@ -55,6 +57,11 @@
 
   button {
     margin-left: auto;
+    background-color: #f4f4f4;
+
+    .icon {
+      color: blue;
+    }
   }
 }
 
@@ -63,3 +70,8 @@
   grid-template-columns: auto auto auto;
 }
 
+.dialog-buttons {
+  display: flex;
+  justify-content: right;
+  color: blue;
+}
